# pyserato

./: README.md  pyproject.toml
.github/workflows/: main_test.yaml
examples/: create_crates.py  read_crates.py  write_cues.py
src/pyserato/: builder.py  crate.py  util.py
src/pyserato/encoders/: base_encoder.py  serato_tags.py  utils.py  v1_mp3_encoder.py  v2_mp3_encoder.py
src/pyserato/encoders/v1/: v1_mp3_encoder.py
src/pyserato/encoders/v2/: v2_mp3_encoder.py
src/pyserato/model/: crate.py  hot_cue.py  offset.py  serato_color.py  song.py  tempo.py  track.py
tests/: test_crate.py  test_hot_cue.py  test_util.py
